syntax = "proto3";

option java_multiple_files = true;
option java_package = "is4b.facilities";
option java_outer_classname = "FacilitiesProto";

package facilities;

message MeetingRoom {
  int32 id = 1;
  int32 buildingId = 2;
  int32 floor = 3;
  string name = 4;
  int32 capacity = 5;
  bool hasProjector = 6;
  bool hasWhiteboard = 7;
  bool hasConferenceLine = 8;
}

message MeetingRoomReservation {
  int32 id = 1;
  int32 userId = 2;
  int32 meetingRoomId = 3;
  string startTime = 4;
  string endTime = 5;
  string timeReserved = 6;
}

message ReserveMeetingRoomEvent {
  int32 userId = 1;
  int32 meetingRoomId = 2;
  string startTime = 3;
  string endTime = 4;
}

message ListMeetingRoomReservationsEvent {
  int32 userId = 1;
  int32 meetingRoomId = 2;
}

message FindAvailableMeetingRoomsEvent {
  int32 userId = 1;
  string startTime = 3;
  string endTime = 4;
}

message ConfirmationEvent {
  int32 returnCode = 1;
  string statusMessage = 2;
}

service FacilitiesReservation {
  rpc reserveMeetingRoom(ReserveMeetingRoomEvent) returns (ConfirmationEvent) {}
  rpc listMeetingRoomReservations(ListMeetingRoomReservationsEvent) returns (stream MeetingRoomReservation) {}
  rpc findAvailableMeetingRooms(FindAvailableMeetingRoomsEvent) returns (stream MeetingRoom) {}
}